<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>com.basic.im</groupId>
		<artifactId>mianshi-parent</artifactId>
		<version>socket-2.0</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>mianshi-service</artifactId>
	<name>mianshi-service</name>
	<description>mianshi-service</description>

	<properties>
		<badic-commom.version>1.0</badic-commom.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.basic.im.modules</groupId>
			<artifactId>comm-maven-pom</artifactId>
			<version>1.0</version>
		</dependency>
        <dependency>
            <groupId>com.basic.im.modules</groupId>
            <artifactId>im-core-module</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
		<dependency>
			<groupId>com.basic.im.modules</groupId>
			<artifactId>user-module</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.basic.im.modules</groupId>
			<artifactId>room-module</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.basic.im.modules</groupId>
			<artifactId>friend-module</artifactId>
			<version>1.0</version>
		</dependency>
		 <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.7</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>22.0</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons-codec.version}</version>
		</dependency>

		<dependency>
		    <groupId>commons-beanutils</groupId>
		    <artifactId>commons-beanutils</artifactId>
		    <version>1.9.3</version>
		</dependency>
		
		<dependency>
			<groupId>net.spy</groupId>
			<artifactId>spymemcached</artifactId>
			<version>2.11.6</version>
		</dependency>
		<dependency>
		    <groupId>org.jdom</groupId>
		    <artifactId>jdom</artifactId>
		    <version>2.0.2</version>
		</dependency>

		 <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.32.Final</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.chat.imserver</groupId>
            <artifactId>chat-im-common</artifactId>
            <version>1.3.0</version>
        </dependency>

		<dependency>
			<groupId>org.t-io</groupId>
			<artifactId>tio-core</artifactId>
			<version>3.6.2.v20200808-RELEASE</version>
		</dependency>

		<dependency>
			<groupId>com.huawei.hms</groupId>
			<artifactId>hmssdk-base</artifactId>
			<version>2.5.3.305</version>
		</dependency>
		
		<dependency>
			<groupId>com.github.stuxuhai</groupId>
			<artifactId>zh-converter</artifactId>
			<version>1.0</version>
		</dependency>


	</dependencies>


	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
					<fork>true</fork>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
		        <configuration>
		          <skip>true</skip>
		        </configuration>
		     </plugin>
		</plugins>
	</build>
</project>